[gd_scene load_steps=19 format=2]

[ext_resource path="res://Ship.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fundos/Soccer_Ships_Fundo_NOVO.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fundos/Soccer_Ships_GOLs.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fundos/Soccer_Ships_HUB.png" type="Texture" id=4]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=5]
[ext_resource path="res://Arena.gd" type="Script" id=6]
[ext_resource path="res://Ship - Copia.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Fonts/Pixel/windows_command_prompt.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Ball.gd" type="Script" id=9]

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.0
bounce = 0.5

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1309.64, 97.8572 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40.5358, 2056.07 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 12 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 52.5, 1.5 )

[sub_resource type="DynamicFont" id=6]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.745098 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=9]
size = 26
font_data = ExtResource( 8 )

[node name="Arena" type="Node2D"]
script = ExtResource( 6 )

[node name="Space2" type="Sprite" parent="."]
scale = Vector2( 0.14, 0.14 )
texture = ExtResource( 2 )
centered = false

[node name="Space" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Ship" parent="." instance=ExtResource( 1 )]
position = Vector2( 180, 500 )
rotation = 0.0
mass = 1.32653
physics_material_override = SubResource( 3 )
spin_thrust = 1200

[node name="Ship2" parent="." instance=ExtResource( 7 )]
position = Vector2( 180, 100 )
rotation = -3.14159

[node name="Ball" parent="." instance=ExtResource( 5 )]
position = Vector2( 180, 300 )
collision_mask = 3
mass = 0.0510204
script = ExtResource( 9 )

[node name="Goals" type="Sprite" parent="."]
position = Vector2( 0.000610352, 0 )
scale = Vector2( 0.14, 0.14 )
texture = ExtResource( 3 )
centered = false

[node name="HUB" type="Sprite" parent="."]
scale = Vector2( 0.14, 0.14 )
texture = ExtResource( 4 )
centered = false

[node name="Areana Limits" type="StaticBody2D" parent="."]
position = Vector2( 181, 14 )
scale = Vector2( 0.14, 0.14 )
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areana Limits"]
position = Vector2( 14.2855, -135.714 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Areana Limits"]
position = Vector2( 14.2854, 4057.14 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Areana Limits"]
position = Vector2( -1269.11, 1915.36 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Areana Limits"]
position = Vector2( 1235.71, 1915.36 )
shape = SubResource( 2 )

[node name="Goal" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal"]
position = Vector2( 122, 21 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Goal"]
position = Vector2( 237, 21 )
shape = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Goal"]
position = Vector2( 122, 556 )
shape = SubResource( 4 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Goal"]
position = Vector2( 237, 556 )
shape = SubResource( 4 )

[node name="Blue Goal" type="Area2D" parent="."]
position = Vector2( 137, 3 )
collision_layer = 8
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blue Goal"]
position = Vector2( 42.5, 7.5 )
shape = SubResource( 5 )

[node name="Red Goal" type="Area2D" parent="."]
position = Vector2( 137, 559 )
collision_layer = 8
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Red Goal"]
position = Vector2( 42.5, 7.5 )
shape = SubResource( 5 )

[node name="HUD" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blue" type="Label" parent="HUD"]
modulate = Color( 0.341176, 0.635294, 0.960784, 1 )
margin_left = 324.0
margin_top = 265.0
margin_right = 347.0
margin_bottom = 295.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Red" type="Label" parent="HUD"]
modulate = Color( 0.972549, 0.054902, 0.286275, 1 )
margin_left = 324.0
margin_top = 300.0
margin_right = 347.0
margin_bottom = 330.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="HUD"]
anchor_left = 6.6
anchor_top = 6.725
anchor_right = 8.15
anchor_bottom = 8.2
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="CenterContainer" type="CenterContainer" parent="HUD/PanelContainer"]
margin_right = 62.0
margin_bottom = 59.0

[node name="CountDown" type="Label" parent="HUD/PanelContainer/CenterContainer"]
margin_left = 24.0
margin_top = 16.0
margin_right = 37.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 7 )
text = "3"

[node name="Time" type="Panel" parent="HUD"]
modulate = Color( 1, 1, 1, 0.917647 )
margin_left = 11.0
margin_top = 287.0
margin_right = 59.0
margin_bottom = 311.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/Time"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -11.5
margin_right = 20.0
margin_bottom = 11.5
custom_fonts/font = SubResource( 9 )
text = "120"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="TimeNormal" type="Timer" parent="."]
wait_time = 120.0
one_shot = true

[connection signal="reset" from="." to="Ship" method="_on_Arena_reset"]
[connection signal="reset" from="." to="Ship2" method="_on_Arena_reset"]
[connection signal="reset" from="." to="Ball" method="_on_Arena_reset"]
[connection signal="body_entered" from="Blue Goal" to="." method="_on_Blue_Goal_body_entered"]
[connection signal="body_entered" from="Red Goal" to="." method="_on_Red_Goal_body_entered"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="TimeNormal" to="." method="_on_TimeNormal_timeout"]
