[gd_scene load_steps=15 format=2]

[ext_resource path="res://Ship.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fundos/Soccer_Ships_FUNDO_1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fundos/Soccer_Ships_GOLs.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fundos/Soccer_Ships_HUB.png" type="Texture" id=4]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=5]
[ext_resource path="res://Arena.gd" type="Script" id=6]
[ext_resource path="res://Ship - Copia.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Fonts/Changa-VariableFont_wght.ttf" type="DynamicFontData" id=8]

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.0
bounce = 0.5

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1309.64, 97.8572 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40.5358, 2056.07 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 12 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 52.5, 1.5 )

[sub_resource type="DynamicFont" id=6]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[node name="Arena" type="Node2D"]
script = ExtResource( 6 )

[node name="Space2" type="Sprite" parent="."]
scale = Vector2( 0.14, 0.14 )
texture = ExtResource( 2 )
centered = false

[node name="Space" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Ship" parent="." instance=ExtResource( 1 )]
position = Vector2( 180, 500 )
rotation = 0.0
mass = 1.32653
physics_material_override = SubResource( 3 )
spin_thrust = 1200

[node name="Ship2" parent="." instance=ExtResource( 7 )]
position = Vector2( 180, 100 )
rotation = -3.14159

[node name="Ball" parent="." instance=ExtResource( 5 )]
position = Vector2( 180, 300 )
collision_mask = 3
mass = 0.0510204

[node name="Goals" type="Sprite" parent="."]
position = Vector2( 0.000610352, 0 )
scale = Vector2( 0.14, 0.14 )
texture = ExtResource( 3 )
centered = false

[node name="HUB" type="Sprite" parent="."]
scale = Vector2( 0.14, 0.14 )
texture = ExtResource( 4 )
centered = false

[node name="Areana Limits" type="StaticBody2D" parent="."]
position = Vector2( 181, 14 )
scale = Vector2( 0.14, 0.14 )
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areana Limits"]
position = Vector2( 14.2855, -135.714 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Areana Limits"]
position = Vector2( 14.2854, 4057.14 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Areana Limits"]
position = Vector2( -1269.11, 1915.36 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Areana Limits"]
position = Vector2( 1235.71, 1915.36 )
shape = SubResource( 2 )

[node name="Goal" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal"]
position = Vector2( 122, 21 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Goal"]
position = Vector2( 237, 21 )
shape = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Goal"]
position = Vector2( 122, 556 )
shape = SubResource( 4 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Goal"]
position = Vector2( 237, 556 )
shape = SubResource( 4 )

[node name="Blue Goal" type="Area2D" parent="."]
position = Vector2( 137, 3 )
collision_layer = 8
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blue Goal"]
position = Vector2( 42.5, 7.5 )
shape = SubResource( 5 )

[node name="Red Goal" type="Area2D" parent="."]
position = Vector2( 137, 559 )
collision_layer = 8
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Red Goal"]
position = Vector2( 42.5, 7.5 )
shape = SubResource( 5 )

[node name="Score" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blue" type="Label" parent="Score"]
modulate = Color( 0.341176, 0.635294, 0.960784, 1 )
margin_left = 324.0
margin_top = 265.0
margin_right = 347.0
margin_bottom = 295.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Red" type="Label" parent="Score"]
modulate = Color( 0.972549, 0.054902, 0.286275, 1 )
margin_left = 324.0
margin_top = 300.0
margin_right = 347.0
margin_bottom = 330.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="Blue_Goal" from="." to="Ship" method="_on_Arena_Blue_Goal"]
[connection signal="Red_Goal" from="." to="Ship2" method="_on_Arena_Red_Goal"]
[connection signal="body_entered" from="Blue Goal" to="." method="_on_Blue_Goal_body_entered"]
[connection signal="body_entered" from="Red Goal" to="." method="_on_Red_Goal_body_entered"]
